# indic-htr

./: .gitignore  LICENSE  README.md  base_train.py  config.py  index.md  lang_train.py  pretrain.py  pyproject.toml  utils.py
alphabet/: ur.txt
datasets/: dataset.py  imprint_dataset.py
models/: res_crnn.py
tools/: create_dataset.py  oov_score.py  score.py
